[gd_scene load_steps=2 format=2]

[ext_resource path="res://Track Menu.gd" type="Script" id=1]

[node name="Track Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="PB" type="Button" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 147.0
size_flags_vertical = 3
text = "Play Personal Best"

[node name="Official" type="Button" parent="VBoxContainer"]
margin_top = 151.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_vertical = 3
text = "Play Official"

[node name="World" type="Button" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 449.0
size_flags_vertical = 3
text = "Play World Record"

[node name="Live" type="Button" parent="VBoxContainer"]
margin_top = 453.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
disabled = true
text = "Play Someone Live"

[connection signal="pressed" from="VBoxContainer/PB" to="." method="_on_PB_pressed"]
[connection signal="pressed" from="VBoxContainer/Official" to="." method="_on_Official_pressed"]
[connection signal="pressed" from="VBoxContainer/World" to="." method="_on_World_pressed"]
[connection signal="pressed" from="VBoxContainer/Live" to="." method="_on_Live_pressed"]
